@@ -1,4 +1,5 @@
 ---version 2.0.4 yet to be released---
+23-nov-2008 - shinydoofy - movie subs now have a toggle button in the SDL build (F10 by default)
 23-nov-2008 - adelikat - movie subtitle system installed
 22-nov-2008 - adelikat - win32 - added help menu item to TASEdit and Hex Editor, Minor TASEdit clean up
 22-nov-2008 - adelikat - win32 - fixed so that turbo works with VBlank sync settings
